e2e/agic/hostnameextension/https/input/ingress-hostname-extension.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/hostname-extension: fabrikam.com, sub.fabrikam.com, sub-2.fabrikam.com
spec:
  tls:
  - hosts:
      - contoso.com
    secretName: contoso-secret
  - hosts:
      - fabrikam.com
    secretName: fabrikam-secret
  - hosts:
      - sub.fabrikam.com
      - sub-2.fabrikam.com
    secretName: sub-fabrikam-secret
  rules:
    - host: contoso.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: contoso-service
                port:
                  number: 80
            pathType: Exact
